FAC-825 Add 'resolvable' field to the output of GetEvidenceListService