@@ -3,9 +3,10 @@ package org.flickit.assessment.core.application.service.evidence;
 import org.flickit.assessment.common.application.domain.assessment.AssessmentAccessChecker;
 import org.flickit.assessment.common.application.domain.crud.PaginatedResponse;
 import org.flickit.assessment.common.exception.AccessDeniedException;
+import org.flickit.assessment.core.application.domain.AssessmentUserRole;
 import org.flickit.assessment.core.application.port.in.evidence.GetEvidenceListUseCase;
-import org.flickit.assessment.core.application.port.in.evidence.GetEvidenceListUseCase.EvidenceListItem;
 import org.flickit.assessment.core.application.port.in.evidence.GetEvidenceListUseCase.Param;
+import org.flickit.assessment.core.application.port.out.assessmentuserrole.LoadUserRoleForAssessmentPort;
 import org.flickit.assessment.core.application.port.out.evidence.LoadEvidencesPort;
 import org.flickit.assessment.core.application.port.out.minio.CreateFileDownloadLinkPort;
 import org.junit.jupiter.api.Test;
@@ -18,6 +19,7 @@ import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
 import static java.util.concurrent.ThreadLocalRandom.current;
@@ -43,12 +45,15 @@ class GetEvidenceListServiceTest {
     @Mock
     private CreateFileDownloadLinkPort createFileDownloadLinkPort;
 
+    @Mock
+    private LoadUserRoleForAssessmentPort loadUserRoleForAssessmentPort;
+
     @Test
     void testGetEvidenceList_ResultsFound_2ItemsReturned() {
         Long question1Id = 1L;
         UUID currentUserId = UUID.randomUUID();
-        EvidenceListItem evidence1Q1 = createEvidenceWithType("Positive", currentUserId);
-        EvidenceListItem evidence2Q1 = createEvidenceWithType("Negative", UUID.randomUUID());
+        LoadEvidencesPort.EvidenceListItem evidence1Q1 = createEvidenceWithType(null, currentUserId);
+        LoadEvidencesPort.EvidenceListItem evidence2Q1 = createEvidenceWithType("Negative", UUID.randomUUID());
         UUID assessmentId = UUID.randomUUID();
 
         when(assessmentAccessChecker.isAuthorized(assessmentId, currentUserId, VIEW_EVIDENCE_LIST)).thenReturn(true);
@@ -60,27 +65,30 @@ class GetEvidenceListServiceTest {
                 "lastModificationTime",
                 "DESC",
                 2));
+        when(loadUserRoleForAssessmentPort.load(assessmentId, currentUserId)).thenReturn(Optional.of(AssessmentUserRole.MANAGER));
         when(createFileDownloadLinkPort.createDownloadLink(any(), any())).thenReturn("pictureLink");
 
-        PaginatedResponse<EvidenceListItem> result = service.getEvidenceList(new Param(question1Id, assessmentId, 10, 0, currentUserId));
+        var result = service.getEvidenceList(new Param(question1Id, assessmentId, 10, 0, currentUserId));
 
         assertEquals(2, result.getItems().size());
         assertEquals(evidence1Q1.id(), result.getItems().getFirst().id());
         assertEquals(evidence1Q1.type(), result.getItems().getFirst().type());
-        assertEquals(evidence1Q1.createdBy(), result.getItems().getFirst().createdBy());
+        assertEquals(evidence1Q1.createdBy().id(), result.getItems().getFirst().createdBy().id());
         assertEquals(evidence1Q1.description(), result.getItems().getFirst().description());
         assertEquals(evidence1Q1.lastModificationTime(), result.getItems().getFirst().lastModificationTime());
         assertEquals(evidence1Q1.attachmentsCount(), result.getItems().getFirst().attachmentsCount());
-        assertTrue(result.getItems().get(0).editable());
-        assertTrue(result.getItems().get(0).deletable());
+        assertTrue(result.getItems().getFirst().editable());
+        assertTrue(result.getItems().getFirst().deletable());
+        assertTrue(result.getItems().getFirst().resolvable());
         assertEquals(evidence2Q1.id(), result.getItems().get(1).id());
         assertEquals(evidence2Q1.type(), result.getItems().get(1).type());
-        assertEquals(evidence2Q1.createdBy(), result.getItems().get(1).createdBy());
+        assertEquals(evidence2Q1.createdBy().id(), result.getItems().get(1).createdBy().id());
         assertEquals(evidence2Q1.description(), result.getItems().get(1).description());
         assertEquals(evidence2Q1.lastModificationTime(), result.getItems().get(1).lastModificationTime());
         assertEquals(evidence2Q1.attachmentsCount(), result.getItems().get(1).attachmentsCount());
         assertFalse(result.getItems().get(1).editable());
         assertFalse(result.getItems().get(1).deletable());
+        assertFalse(result.getItems().get(1).resolvable());
         verify(createFileDownloadLinkPort, times(2)).createDownloadLink(anyString(), any(Duration.class));
     }
 
@@ -99,8 +107,9 @@ class GetEvidenceListServiceTest {
                 "lastModificationTime",
                 "DESC",
                 0));
+        when(loadUserRoleForAssessmentPort.load(assessmentId, currentUserId)).thenReturn(Optional.of(AssessmentUserRole.MANAGER));
 
-        PaginatedResponse<EvidenceListItem> result = service.getEvidenceList(new Param(questionId, assessmentId, 10, 0, currentUserId));
+        var result = service.getEvidenceList(new Param(questionId, assessmentId, 10, 0, currentUserId));
 
         assertEquals(0, result.getItems().size());
         verifyNoInteractions(createFileDownloadLinkPort);
@@ -117,14 +126,14 @@ class GetEvidenceListServiceTest {
         assertEquals(COMMON_CURRENT_USER_NOT_ALLOWED, throwable.getMessage());
     }
 
-    private EvidenceListItem createEvidenceWithType(String type, UUID createdBy) {
-        return new EvidenceListItem(
+    private LoadEvidencesPort.EvidenceListItem createEvidenceWithType(String type, UUID createdBy) {
+        return new LoadEvidencesPort.EvidenceListItem(
             UUID.randomUUID(),
             "desc",
             type,
             LocalDateTime.now(),
             current().nextInt(1, 6),
-            new GetEvidenceListUseCase.User(createdBy, "user1", "pictureLink"),
+            new LoadEvidencesPort.User(createdBy, "user1", "pictureLink"),
             null,
             null
         );
